# CodeBank

./: .gitignore  README.md  TODO.txt  ToDo.yaml  setup.cfg
CodeBank/DataFramework/DataVisualization/: Readme.txt  __init__.py  colabPlot.py  continuousPlot.py  multidimensionalPlot.py  show_img.py
CodeBank/DatasetFramework/DataAugmentation/: txtAugmentation.py
CodeBank/DatasetFramework/DataEstimation/: __init__.py  dataEstimator.py
CodeBank/DatasetFramework/DataFiltering/: fieldFilter.py
CodeBank/DatasetFramework/DataInterpolation/: __init__.py  continuousClassification.py  segmentatedClassification.py
CodeBank/DatasetFramework/DataInterpolation.py/: continuousClassification.py
CodeBank/DatasetFramework/DataRetrieval/: fileLoader.py
CodeBank/DatasetFramework/DataSegmentation/: __init__.py
CodeBank/DatasetFramework/DataSplit/: __init__.py  bootStrap.py  bootStrapping.py  crossValidation.py  datasetSplit.py  (+1 more)
CodeBank/Debugging/: __init__.py  debugMode.py
CodeBank/FileMagement/: __init__.py  fileSearcher.py  getPath.py  logger.py
CodeBank/NLP/: tokenizer.py
CodeBank/NeuralNetworks/: torchModel.py  vision.py
CodeBank/Recipes/: training.yaml
CodeBaseLib/DataStructures/: nestedDict.py
CodeBaseLib/DataVisualization/: functionPlot.py
CodeBaseLib/FileMagement/: __init__.py  fileSearcher.py  getPath.py
CodeBaseLib/Heuristics/: geneticAlgorithms.py
CodeBaseLib/IDEAS/: laboNeurociencias.py  machineLearning.py
CodeBaseLib/Neural Networks/: EchoStateMachine.py
CodeBaseLib/SignalProcessing/: WaveletTransform.py
machine_learning/: Dropout.ipynb
(+155 files in other folders)
