[metadata]
name = CodeBaseLib
version = 1.0.1
author = Eichenbaum Daniel
author_email = leinaxd.work@gmail.com
description = A library for common code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leinaxd/CodeBaseLib
license = MIT

[options]
packages = find:
install_requires = 
    torch 
    numpy
    # torchTyping
    # distro
    # sacrebleu

[options.packages.find]
exclude = test*
