[metadata]
name = CodeBank
version = 1.0.1
author = Eichenbaum Daniel
author_email = eichenbaum.daniel@gmail.com
description = A library for common code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leinaxd/CodeBank
license = MIT

[options]
packages = find:
install_requires = 
    torch 
    numpy
    # torchTyping
    # distro
    # sacrebleu

[options.packages.find]
exclude = test*
